feat: align version with Angular 20+ (v20.0.0) and enhance keywords
BREAKING CHANGE: Version strategy now follows Angular major versions
- Updated to v20.0.0 to align with Angular 20+ support
- Enhanced npm keywords for better discoverability
- Updated changelog to reflect new versioning strategy
- Major version will track Angular major versions going forward

--- a/projects/mat-progress-bar-library/package.json
+++ b/projects/mat-progress-bar-library/package.json
@@ -1,16 +1,32 @@
 {
   "name": "ngx-mat-progress-bar",
-  "version": "1.0.0",
-  "description": "Angular Material progress bar library with global progress indicator similar to ngx-progressbar but using Material Design components",
+  "version": "20.0.0",
+  "description": "Modern Angular 20+ Material progress bar library with signals, standalone components, and smart HTTP request batching",
   "keywords": [
     "angular",
+    "angular20",
     "material",
+    "material-design",
     "progress",
     "progressbar",
+    "progress-bar",
     "loading",
     "loader",
+    "spinner",
     "angular-material",
-    "ngx"
+    "ngx",
+    "standalone",
+    "signals",
+    "interceptor",
+    "http",
+    "router",
+    "navigation",
+    "typescript",
+    "rxjs",
+    "reactive",
+    "ui",
+    "component",
+    "library"
   ],
   "author": "evicio1",
   "license": "MIT",
