fix: update workflow to create releases for existing tags
- Add tag push trigger to workflow (refs/tags/v*)
- Handle both branch and tag-triggered releases
- Extract version from tag name when triggered by tag
- Update release creation conditions
- Add npm downloads badge to README

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - 'v*'  # Trigger on version tags (v1.0.0, v20.0.0, etc.)
   workflow_dispatch:
 
 jobs:
@@ -52,17 +54,28 @@ jobs:
       - name: Get package information
         id: package_info
         run: |
-          CURRENT_VERSION=$(node -p "require('./projects/${{ env.LIBRARY_PROJECT }}/package.json').version")
+          # If triggered by a tag, extract version from tag name
+          if [[ "${{ github.ref }}" == refs/tags/v* ]]; then
+            CURRENT_VERSION="${{ github.ref_name }}"
+            CURRENT_VERSION="${CURRENT_VERSION#v}"  # Remove 'v' prefix
+            echo "Using version from tag: $CURRENT_VERSION"
+          else
+            CURRENT_VERSION=$(node -p "require('./projects/${{ env.LIBRARY_PROJECT }}/package.json').version")
+            echo "Using version from package.json: $CURRENT_VERSION"
+          fi
+          
           ANGULAR_VERSION=$(node -p "require('./package.json').dependencies['@angular/core']")
           PACKAGE_SIZE=$(du -sh projects/${{ env.LIBRARY_PROJECT }} | cut -f1)
           
           echo "version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
           echo "angular_version=$ANGULAR_VERSION" >> $GITHUB_OUTPUT
           echo "package_size=$PACKAGE_SIZE" >> $GITHUB_OUTPUT
+          echo "is_tag_trigger=$([[ "${{ github.ref }}" == refs/tags/v* ]] && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
           
           echo "Package Version: $CURRENT_VERSION"
           echo "Angular Version: $ANGULAR_VERSION"
           echo "Package Size: $PACKAGE_SIZE"
+          echo "Triggered by tag: $([[ "${{ github.ref }}" == refs/tags/v* ]] && echo 'true' || echo 'false')"
 
       - name: Check if version exists on npm
         id: check_version
@@ -227,12 +240,12 @@ jobs:
           echo "Created tarball: $TARBALL_NAME"
 
       - name: Create GitHub Release
-        if: steps.check_version.outputs.exists == 'false' && success() && steps.check_tag.outputs.exists == 'false'
+        if: steps.check_version.outputs.exists == 'false' && success() && (steps.check_tag.outputs.exists == 'false' || steps.package_info.outputs.is_tag_trigger == 'true')
         uses: softprops/action-gh-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.create_tag.outputs.tag_name }}
+          tag_name: ${{ steps.package_info.outputs.is_tag_trigger == 'true' && github.ref_name || steps.create_tag.outputs.tag_name }}
           name: "🚀 ngx-mat-progress-bar v${{ steps.package_info.outputs.version }}"
           body_path: release_notes.md
           files: |
